syntax = "proto3";

package cloudprober.probes.alerts;

option go_package = "github.com/cloudprober/cloudprober/probes/alerting/proto";


message NotifyConfig {
    // Command to run when alert is fired. In the command line following fields
    // are substituted:
    //  @alert@: Alert name
    //  @probe@: Probe name
    //  @target@: Target name, or target and port if port is specified.
    //  @target.label.<label>@: Label <label> value, e.g. target.label.role.
    //  @value@: Value that triggered the alert.
    //  @threshold@: Threshold that was crossed.
    //  @since@: Time since the alert condition started.
    //  @json@: JSON representation of the alert fields.
    //
    // For example, if you want to send an email when an alert is fired, you can
    // use the following command:
    // command: "/usr/bin/mail -s 'Alert @alert@ fired for @target@' manu@a.b"
    string command = 1;
}

message Condition {
    int32 failures = 1;
    int32 total = 2;
}

message AlertConf {
    // Name of the alert. Default is to use the probe name.
    string name = 1;

    // Condition for the alert. Default is to alert on any failure.
    // Example:
    // # Alert if 6 out of 10 probes fail.
    // condition {
    //   failures: 6
    //   total: 10
    // }
    optional Condition condition = 2;

    // How to notify in case of alert.
    NotifyConfig notify = 3;
}
